// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabList a label contains a node renders 1`] = `
<div
  className="clearfix"
>
  <div
    className="fl"
    key="0"
  >
    <button
      aria-label="one"
      className="px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 inline-block border-b border--transparent "
      data-test="one"
      key="one"
      onClick={[Function]}
      type="button"
    >
      <Icon
        inline={false}
        name="star"
        passthroughProps={Object {}}
        size={18}
      />
    </button>
  </div>
  <div
    className="fl"
    key="1"
  >
    <button
      aria-label="two"
      className="px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 inline-block border-b border--transparent "
      data-test="two"
      key="two"
      onClick={[Function]}
      type="button"
    >
      Label two
    </button>
  </div>
  <div
    className="fl"
    key="0"
  >
    <button
      aria-label="three"
      className="px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 inline-block-mm none border--blue txt-bold "
      data-test="three"
      key="three"
      onClick={[Function]}
      type="button"
    >
      Label three
    </button>
  </div>
  <div
    className="fl"
    key="1"
  >
    <button
      aria-label="four"
      className="px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 inline-block-mm none border--transparent "
      data-test="four"
      key="four"
      onClick={[Function]}
      type="button"
    >
      Label four
    </button>
  </div>
  <div
    className="fl"
  >
    <PopoverTrigger
      block={false}
      content={
        Array [
          <div
            className="block"
          >
            <button
              aria-label="three"
              className="px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 border-b--0 border--blue txt-bold "
              data-test="three"
              onClick={[Function]}
              type="button"
            >
              Label three
            </button>
          </div>,
          <div
            className="block"
          >
            <button
              aria-label="four"
              className="px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 border-b--0 border--transparent "
              data-test="four"
              onClick={[Function]}
              type="button"
            >
              Label four
            </button>
          </div>,
        ]
      }
      disabled={false}
      onPopoverClose={[Function]}
      onPopoverOpen={[Function]}
      popoverProps={
        Object {
          "placement": "bottom",
          "themePopover": "round shadow-darken25 h480 scroll-auto px12 py12 scroll-styled",
        }
      }
      receiveFocus={true}
      renderHiddenContent={false}
      respondsToClick={true}
      respondsToFocus={false}
      respondsToHover={true}
      trapFocus={true}
      triggerProps={
        Object {
          "data-test": "more-dropdown-menu",
        }
      }
    >
      <button
        aria-label="More"
        className="px6 py12 mr12 align-l cursor-pointer none-mm"
        type="button"
      >
        More +
      </button>
    </PopoverTrigger>
  </div>
</div>
`;

exports[`TabList basic renders 1`] = `
<div
  className="clearfix"
>
  <div
    className="fl"
    key="0"
  >
    <button
      aria-label="one"
      className="px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 inline-block border-b border--transparent "
      data-test="one"
      key="one"
      onClick={[Function]}
      type="button"
    >
      Label one
    </button>
  </div>
  <div
    className="fl"
    key="1"
  >
    <button
      aria-label="two"
      className="px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 inline-block border-b border--transparent "
      data-test="two"
      key="two"
      onClick={[Function]}
      type="button"
    >
      Label two
    </button>
  </div>
  <div
    className="fl"
    key="0"
  >
    <button
      aria-label="three"
      className="px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 inline-block-mm none border--blue txt-bold "
      data-test="three"
      key="three"
      onClick={[Function]}
      type="button"
    >
      Label three
    </button>
  </div>
  <div
    className="fl"
    key="1"
  >
    <button
      aria-label="four"
      className="px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 inline-block-mm none border--transparent "
      data-test="four"
      key="four"
      onClick={[Function]}
      type="button"
    >
      Label four
    </button>
  </div>
  <div
    className="fl"
  >
    <PopoverTrigger
      block={false}
      content={
        Array [
          <div
            className="block"
          >
            <button
              aria-label="three"
              className="px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 border-b--0 border--blue txt-bold "
              data-test="three"
              onClick={[Function]}
              type="button"
            >
              Label three
            </button>
          </div>,
          <div
            className="block"
          >
            <button
              aria-label="four"
              className="px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 border-b--0 border--transparent "
              data-test="four"
              onClick={[Function]}
              type="button"
            >
              Label four
            </button>
          </div>,
        ]
      }
      disabled={false}
      onPopoverClose={[Function]}
      onPopoverOpen={[Function]}
      popoverProps={
        Object {
          "placement": "bottom",
          "themePopover": "round shadow-darken25 h480 scroll-auto px12 py12 scroll-styled",
        }
      }
      receiveFocus={true}
      renderHiddenContent={false}
      respondsToClick={true}
      respondsToFocus={false}
      respondsToHover={true}
      trapFocus={true}
      triggerProps={
        Object {
          "data-test": "more-dropdown-menu",
        }
      }
    >
      <button
        aria-label="More"
        className="px6 py12 mr12 align-l cursor-pointer none-mm"
        type="button"
      >
        More +
      </button>
    </PopoverTrigger>
  </div>
</div>
`;

exports[`TabList links renders 1`] = `
<div
  className="clearfix"
>
  <div
    className="fl"
    key="0"
  >
    <a
      className="inline-block px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 inline-block border-b border--blue txt-bold "
      data-test="one"
      href="#"
      key="one"
    >
      Label one
    </a>
  </div>
  <div
    className="fl"
    key="1"
  >
    <a
      className="inline-block px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 inline-block border-b border--transparent "
      data-test="two"
      href="#"
      key="two"
    >
      Label two
    </a>
  </div>
  <div
    className="fl"
    key="0"
  >
    <a
      className="inline-block px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 inline-block-mm none border--transparent "
      data-test="three"
      href="#"
      key="three"
    >
      Label three
    </a>
  </div>
  <div
    className="fl"
    key="1"
  >
    <a
      className="inline-block px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 inline-block-mm none border--transparent "
      data-test="four"
      href="#"
      key="four"
    >
      Label four
    </a>
  </div>
  <div
    className="fl"
  >
    <PopoverTrigger
      block={false}
      content={
        Array [
          <div
            className="block"
          >
            <a
              className="inline-block px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 border-b--0 border--transparent "
              data-test="three"
              href="#"
            >
              Label three
            </a>
          </div>,
          <div
            className="block"
          >
            <a
              className="inline-block px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 border-b--0 border--transparent "
              data-test="four"
              href="#"
            >
              Label four
            </a>
          </div>,
        ]
      }
      disabled={false}
      onPopoverClose={[Function]}
      onPopoverOpen={[Function]}
      popoverProps={
        Object {
          "placement": "bottom",
          "themePopover": "round shadow-darken25 h480 scroll-auto px12 py12 scroll-styled",
        }
      }
      receiveFocus={true}
      renderHiddenContent={false}
      respondsToClick={true}
      respondsToFocus={false}
      respondsToHover={true}
      trapFocus={true}
      triggerProps={
        Object {
          "data-test": "more-dropdown-menu",
        }
      }
    >
      <button
        aria-label="More"
        className="px6 py12 mr12 align-l cursor-pointer none-mm"
        type="button"
      >
        More +
      </button>
    </PopoverTrigger>
  </div>
</div>
`;

exports[`TabList truncate all renders 1`] = `
<div
  className="clearfix"
>
  <div
    className="fl"
    key="0"
  >
    <a
      className="inline-block px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 inline-block-mm none border--blue txt-bold "
      data-test="one"
      href="#"
      key="one"
    >
      Label one
    </a>
  </div>
  <div
    className="fl"
    key="1"
  >
    <a
      className="inline-block px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 inline-block-mm none border--transparent "
      data-test="two"
      href="#"
      key="two"
    >
      Label two
    </a>
  </div>
  <div
    className="fl"
    key="2"
  >
    <a
      className="inline-block px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 inline-block-mm none border--transparent "
      data-test="three"
      href="#"
      key="three"
    >
      Label three
    </a>
  </div>
  <div
    className="fl"
    key="3"
  >
    <a
      className="inline-block px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 inline-block-mm none border--transparent "
      data-test="four"
      href="#"
      key="four"
    >
      Label four
    </a>
  </div>
  <div
    className="fl"
  >
    <PopoverTrigger
      block={false}
      content={
        Array [
          <div
            className="block"
          >
            <a
              className="inline-block px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 border-b--0 border--blue txt-bold "
              data-test="one"
              href="#"
            >
              Label one
            </a>
          </div>,
          <div
            className="block"
          >
            <a
              className="inline-block px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 border-b--0 border--transparent "
              data-test="two"
              href="#"
            >
              Label two
            </a>
          </div>,
          <div
            className="block"
          >
            <a
              className="inline-block px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 border-b--0 border--transparent "
              data-test="three"
              href="#"
            >
              Label three
            </a>
          </div>,
          <div
            className="block"
          >
            <a
              className="inline-block px6 mr24 fl-mm align-center-mm align-l py12 border-b-mm border-b--2 border-b--0 border--transparent "
              data-test="four"
              href="#"
            >
              Label four
            </a>
          </div>,
        ]
      }
      disabled={false}
      onPopoverClose={[Function]}
      onPopoverOpen={[Function]}
      popoverProps={
        Object {
          "placement": "bottom",
          "themePopover": "round shadow-darken25 h480 scroll-auto px12 py12 scroll-styled",
        }
      }
      receiveFocus={true}
      renderHiddenContent={false}
      respondsToClick={true}
      respondsToFocus={false}
      respondsToHover={true}
      trapFocus={true}
      triggerProps={
        Object {
          "data-test": "more-dropdown-menu",
        }
      }
    >
      <button
        aria-label="More"
        className="px6 py12 mr12 align-l cursor-pointer none-mm"
        type="button"
      >
        More +
      </button>
    </PopoverTrigger>
  </div>
</div>
`;
